Updates to most Recent
Updated to most recent version, fixed several issues, and working on
gurobi status class