@@ -12,16 +12,17 @@ import javax.swing.JOptionPane;
 import au.com.bytecode.opencsv.CSVReader;
 
 import edu.rutgers.MOST.config.LocalConfig;
-import edu.rutgers.MOST.logic.ReactionParser1;
+import edu.rutgers.MOST.logic.ReactionParser;
 import edu.rutgers.MOST.presentation.GraphicalInterface;
 import edu.rutgers.MOST.presentation.GraphicalInterfaceConstants;
 
 public class TextReactionsModelReader {
 	
-	boolean addMetaboliteOption = true;
+	public boolean noReactants;     // type ==> p
+	public boolean noProducts;      // type r ==>
 	
 	public ArrayList<String> columnNamesFromFile(File file, int row) {
-		ArrayList<String> columnNamesFromFile = new ArrayList();
+		ArrayList<String> columnNamesFromFile = new ArrayList<String>();
 		
 		String[] dataArray = null;
 
@@ -88,7 +89,7 @@ public class TextReactionsModelReader {
 		CSVReader reader;
 		try {
 			reader = new CSVReader(new FileReader(file), ',');
-			String [] dataArray;
+			String[] dataArray;
 			try {
 				while ((dataArray = reader.readNext()) != null) {
 					count++; 	
@@ -105,13 +106,27 @@ public class TextReactionsModelReader {
 		return count;		
 	}
 
-	public void load(File file, String databaseName){		
+	public void load(File file, String databaseName){	
+		ReactionParser parser = new ReactionParser();		
 		//if first row of file in not column names, starts reading after row that contains names
 		int correction = LocalConfig.getInstance().getReactionsNextRowCorrection();
 		int row = 1;
 		int maxMetabId = LocalConfig.getInstance().getMaxMetaboliteId();
 		
 		LocalConfig.getInstance().getMetaboliteUsedMap().clear();
+		
+		DatabaseCreator databaseCreator = new DatabaseCreator();
+		databaseCreator.createReactionsTable(databaseName, "reactions");
+		databaseCreator.createReactionReactantsTable(databaseName, "reaction_reactants");
+		databaseCreator.createReactionProductsTable(databaseName, "reaction_products");
+		
+		LocalConfig.getInstance().addMetaboliteOption = true;
+		
+		String metaString = "";
+		for (int i = 0; i < 15; i++) {
+			String meta = ", meta_" + (i + 1)+ " varchar(500)";
+			metaString += meta;
+		}
 		
 		String queryString = "jdbc:sqlite:" + databaseName + ".db";
 
@@ -124,25 +139,24 @@ public class TextReactionsModelReader {
 		try{
 			Connection conn =
 				DriverManager.getConnection(queryString);
+
 			Statement stat = conn.createStatement();
-
-			stat.executeUpdate("drop table if exists reactions;");
-			stat.executeUpdate("create table reactions (id INTEGER PRIMARY KEY, " 
-					+ " knockout varchar(6), flux_value double, reaction_abbreviation varchar(40), reaction_name varchar(500), "
-					+ " reaction_string varchar(500), reversible varchar(6), lower_bound double, " 
-					+ " upper_bound double, biological_objective double, meta_1 varchar(500), " 
-					+ " meta_2 varchar(500), meta_3 varchar(500), meta_4 varchar(500), meta_5 varchar(500), "
-					+ " meta_6 varchar(500), meta_7 varchar(500), meta_8 varchar(500), meta_9 varchar(500), "
-					+ " meta_10 varchar(500), meta_11 varchar(500), meta_12 varchar(500), "
-					+ " meta_13 varchar(500), meta_14 varchar(500), meta_15 varchar(500));");
 			
-			stat.executeUpdate("drop table if exists reaction_reactants;");
-			stat.executeUpdate("CREATE TABLE reaction_reactants (reaction_id INTEGER, " 
-					+ " metabolite_id INTEGER, stoic FLOAT);");
-
-			stat.executeUpdate("drop table if exists reaction_products;");
-			stat.executeUpdate("CREATE TABLE reaction_products (reaction_id INTEGER, " 
-					+ " metabolite_id INTEGER, stoic FLOAT);");
+			if (!LocalConfig.getInstance().hasMetabolitesFile) {
+						
+				LocalConfig.getInstance().getMetaboliteUsedMap().clear();
+				LocalConfig.getInstance().getDuplicateIds().clear();
+				LocalConfig.getInstance().getSuspiciousMetabolites().clear();
+				LocalConfig.getInstance().getMetaboliteIdNameMap().clear();
+				LocalConfig.getInstance().setMaxMetaboliteId(0);
+				maxMetabId = 0;
+				
+				databaseCreator.createMetabolitesTable(databaseName, "metabolites");
+				
+				stat.executeUpdate("drop table if exists metabolites_meta_info;");		    
+				stat.executeUpdate("CREATE TABLE metabolites_meta_info (id INTEGER PRIMARY KEY, meta_column_name varchar(100));");
+				
+			}
 			
 			CSVReader reader;
 			try {
@@ -158,9 +172,23 @@ public class TextReactionsModelReader {
 				
 				int numLines = numberOfLines(file);
 				
-				stat.executeUpdate("BEGIN TRANSACTION");	
+				stat.executeUpdate("BEGIN TRANSACTION");
+				PreparedStatement reacInsertPrep = conn.prepareStatement("INSERT INTO reactions(knockout, flux_value, reaction_abbreviation, " 
+						+ " reaction_name, reaction_equn_abbr, reaction_equn_names, reversible, lower_bound, upper_bound, biological_objective," 
+						+ " synthetic_objective, gene_associations, meta_1, meta_2, meta_3, meta_4, meta_5, meta_6, meta_7, meta_8, meta_9, meta_10, meta_11, "
+						+ " meta_12, meta_13, meta_14, meta_15) values (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)"); 
+				PreparedStatement addMetabPrep = conn.prepareStatement("insert into metabolites (metabolite_abbreviation, boundary) values(?, 'false')");											
+				PreparedStatement rrInsertPrep = conn.prepareStatement("INSERT INTO reaction_reactants(reaction_id, stoic, metabolite_id) values (?, ?, ?)");
+				PreparedStatement rpInsertPrep = conn.prepareStatement("INSERT INTO reaction_products(reaction_id, stoic, metabolite_id) values (?, ?, ?)");
+				PreparedStatement deleteReacPrep = conn.prepareStatement("delete from reaction_reactants where reaction_id=?;");
+				PreparedStatement deleteProdPrep = conn.prepareStatement("delete from reaction_products where reaction_id=?;");
+				PreparedStatement reacNamePrep = conn.prepareStatement("SELECT metabolite_name from metabolites where id=?;");
 				for (int i = 0; i < numLines; i++) {
 					LocalConfig.getInstance().setProgress(i*100/numLines);
+					
+					StringBuffer reacNamesBfr = new StringBuffer();
+					StringBuffer prodNamesBfr = new StringBuffer();
+					StringBuffer rxnNamesBfr = new StringBuffer();
 					
 					String [] dataArray = reader.readNext();
 					for (int s = 0; s < dataArray.length; s++) {
@@ -174,11 +202,14 @@ public class TextReactionsModelReader {
 						Double fluxValue = GraphicalInterfaceConstants.FLUX_VALUE_DEFAULT;
 						String reactionAbbreviation = "";
 						String reactionName = "";
-						String reactionString = "";
+						String reactionEqunAbbr = "";
+						String reactionEqunNames = "";
 						String reversible = "";
 						Double lowerBound = GraphicalInterfaceConstants.LOWER_BOUND_DEFAULT;
 						Double upperBound =	GraphicalInterfaceConstants.UPPER_BOUND_DEFAULT;
-						Double objective = GraphicalInterfaceConstants.BIOLOGICAL_OBJECTIVE_DEFAULT;
+						Double biologicalObjective = GraphicalInterfaceConstants.BIOLOGICAL_OBJECTIVE_DEFAULT;
+						Double syntheticObjective = GraphicalInterfaceConstants.SYNTHETIC_OBJECTIVE_DEFAULT;
+						String geneAssociations = "";
 						String meta1 = "";
 						String meta2 = "";
 						String meta3 = "";
@@ -203,31 +234,19 @@ public class TextReactionsModelReader {
 							} 
 						} 
 						if (LocalConfig.getInstance().getFluxValueColumnIndex() > -1) {
-							if (dataArray[LocalConfig.getInstance().getFluxValueColumnIndex()].compareTo("") != 0) {
+							if (isNumber(dataArray[LocalConfig.getInstance().getFluxValueColumnIndex()])) {
 								fluxValue = Double.valueOf(dataArray[LocalConfig.getInstance().getFluxValueColumnIndex()]);
 							} 
 						} 
 						
-						//if strings contain ' (single quote), it will not execute insert statement
-						//this code escapes ' as '' - sqlite syntax for escaping '
-						if (dataArray[LocalConfig.getInstance().getReactionAbbreviationColumnIndex()].contains("'")) {
-							reactionAbbreviation = dataArray[LocalConfig.getInstance().getReactionAbbreviationColumnIndex()].replaceAll("'", "''");
-						} else {
-							reactionAbbreviation = dataArray[LocalConfig.getInstance().getReactionAbbreviationColumnIndex()];
-						}
-												
-						if (dataArray[LocalConfig.getInstance().getReactionNameColumnIndex()].contains("'")) {
-							reactionName = dataArray[LocalConfig.getInstance().getReactionNameColumnIndex()].replaceAll("'", "''");
-						} else {
-							reactionName = dataArray[LocalConfig.getInstance().getReactionNameColumnIndex()];
-						}	
+						reactionAbbreviation = dataArray[LocalConfig.getInstance().getReactionAbbreviationColumnIndex()];
 						
-						if (dataArray[LocalConfig.getInstance().getReactionEquationColumnIndex()].contains("'")) {
-							reactionString = dataArray[LocalConfig.getInstance().getReactionEquationColumnIndex()].replaceAll("'", "''");
-						} else {
-							reactionString = dataArray[LocalConfig.getInstance().getReactionEquationColumnIndex()];
+						if (LocalConfig.getInstance().getReactionNameColumnIndex() > -1) {
+							reactionName = dataArray[LocalConfig.getInstance().getReactionNameColumnIndex()];
 						}
-						reactionString = reactionString.trim();
+								
+						reactionEqunAbbr = dataArray[LocalConfig.getInstance().getReactionEquationColumnIndex()];
+						reactionEqunAbbr = reactionEqunAbbr.trim();
 						
 						if (LocalConfig.getInstance().getReversibleColumnIndex() > -1) {
 							if (dataArray[LocalConfig.getInstance().getReversibleColumnIndex()].compareTo("false") == 0 || dataArray[LocalConfig.getInstance().getReversibleColumnIndex()].compareTo("FALSE") == 0 || dataArray[LocalConfig.getInstance().getReversibleColumnIndex()].compareTo("0") == 0 || dataArray[LocalConfig.getInstance().getReversibleColumnIndex()].compareTo("0.0") == 0) {
@@ -239,40 +258,45 @@ public class TextReactionsModelReader {
 								if (dataArray[LocalConfig.getInstance().getReversibleColumnIndex()].length() > 0) {
 									reversible = dataArray[LocalConfig.getInstance().getReversibleColumnIndex()];
 								} else {
-									if (reactionString != null) {
-										if (reactionString.contains("<") || (reactionString.contains("=") && !reactionString.contains(">"))) {
+									if (reactionEqunAbbr != null) {
+										if (reactionEqunAbbr.contains("<") || (reactionEqunAbbr.contains("=") && !reactionEqunAbbr.contains(">"))) {
 											reversible = "true";
-										} else if (reactionString.contains("-->") || reactionString.contains("->") || reactionString.contains("=>")) {
+										} else if (reactionEqunAbbr.contains("-->") || reactionEqunAbbr.contains("->") || reactionEqunAbbr.contains("=>")) {
 											reversible = "false";		    		
 										}				
 									} 
 								}
-								
 							}
 						}
 						
 						try {
-							ReactionParser1 parser = new ReactionParser1();
+							//ReactionParser parser = new ReactionParser();
 							boolean valid = true;
-							ArrayList<ArrayList> reactionList = parser.reactionList(reactionString.trim());
 							
-							if (parser.isValid(reactionString)) {
-								ArrayList<ArrayList> reactants = reactionList.get(0);
-								//reactions of the type ==> b will be size 1, assigned the value [0] in parser
+							//ArrayList<ArrayList<ArrayList<String>>> reactionList = parser.reactionList(reactionEqunAbbr.trim());
+							if (parser.isValid(reactionEqunAbbr)) {
+								noReactants = false;
+								noProducts = false;
+								ArrayList<ArrayList<String>> reactants = parser.reactionList(reactionEqunAbbr.trim()).get(0);
+								// if user hits "No", reactant will not be included in equation
+								ArrayList<String> removeReacList = new ArrayList<String>();
+								ArrayList<String> removeProdList = new ArrayList<String>();
+								//reactions of the type ==> b will be size 1, assigned the value [0] in parser			
 								if (reactants.get(0).size() == 1) {
+									noReactants = true;
 								} else {
 									for (int r = 0; r < reactants.size(); r++) {
-										if (reactants.get(r).size() == 2) {
+										if (reactants.get(r).size() == 2) {											
 											String stoicStr = (String) reactants.get(r).get(0);
 											String reactant = (String) reactants.get(r).get(1);
-											String addMetab = "insert into metabolites (metabolite_abbreviation, boundary) values('"  + reactant + "', 'false');";	
-											
+											boolean newMetabolite = false;
 											if (!(LocalConfig.getInstance().getMetaboliteIdNameMap().containsKey(reactant.trim()))) {
-												if (GraphicalInterface.showPrompt) {
+												newMetabolite = true;
+												if (GraphicalInterface.showPrompt && reactant.length() > 0) {
 													Object[] options = {"Yes",
 															"Yes to All",
 													"No"};
-
+					
 													int choice = JOptionPane.showOptionDialog(null, 
 															"The metabolite " + reactant + " does not exist. Do you wish to add it?", 
 															"Add Metabolite?", 
@@ -284,42 +308,91 @@ public class TextReactionsModelReader {
 													// interpret the user's choice	  
 													if (choice == JOptionPane.YES_OPTION)
 													{
-														stat.executeUpdate(addMetab);
+														LocalConfig.getInstance().addMetaboliteOption = true;
+														addMetabPrep.setString(1, reactant);
+														addMetabPrep.executeUpdate();
 														maxMetabId += 1;
 														LocalConfig.getInstance().getMetaboliteIdNameMap().put(reactant, new Integer(maxMetabId));
 													}
 													//No option actually corresponds to "Yes to All" button
 													if (choice == JOptionPane.NO_OPTION)
 													{
+														LocalConfig.getInstance().addMetaboliteOption = true;
 														GraphicalInterface.showPrompt = false;
-														stat.executeUpdate(addMetab);
+														addMetabPrep.setString(1, reactant);
+														addMetabPrep.executeUpdate();
 														maxMetabId += 1;
 														LocalConfig.getInstance().getMetaboliteIdNameMap().put(reactant, new Integer(maxMetabId));
 													}
 													//Cancel option actually corresponds to "No" button
 													if (choice == JOptionPane.CANCEL_OPTION) {
-														addMetaboliteOption = false;
-														reactionString = "";
-														valid = false;
+														LocalConfig.getInstance().addMetaboliteOption = false;
+														LocalConfig.getInstance().noButtonClicked = true;
+														removeReacList.add(reactant);
 													}	  
 												} else {
-													stat.executeUpdate(addMetab);
+													addMetabPrep.setString(1, reactant);
+													addMetabPrep.executeUpdate();
 													maxMetabId += 1;
 													LocalConfig.getInstance().getMetaboliteIdNameMap().put(reactant, new Integer(maxMetabId));
 												}											
-											}										
-											
-											Integer id = (Integer) LocalConfig.getInstance().getMetaboliteIdNameMap().get(reactant);
-											
-											String insert = "INSERT INTO reaction_reactants(reaction_id, stoic, metabolite_id) values (" + (i - correction) + ", " + stoicStr + ", " + id + ");";
-											stat.executeUpdate(insert);
-											if (LocalConfig.getInstance().getMetaboliteUsedMap().containsKey(reactant)) {
-												int usedCount = (Integer) LocalConfig.getInstance().getMetaboliteUsedMap().get(reactant);
-												LocalConfig.getInstance().getMetaboliteUsedMap().put(reactant, new Integer(usedCount + 1));									
+											}																
+											Integer id = (Integer) LocalConfig.getInstance().getMetaboliteIdNameMap().get(reactant);				
+											String metabName = "";
+											reacNamePrep.setInt(1, id);
+											ResultSet rs = reacNamePrep.executeQuery();
+											while (rs.next()) {
+												metabName = rs.getString("metabolite_name");
+											}
+											rs.close();
+											if (r == 0) {
+												if (stoicStr.length() == 0 || Double.valueOf(stoicStr) == 1.0) {
+													if (metabName != null && metabName.trim().length() > 0) {
+														reacNamesBfr.append(metabName);
+													} else {
+														reacNamesBfr.append(reactant);
+													}									
+												} else {
+													if (metabName != null && metabName.trim().length() > 0) {
+														reacNamesBfr.append(stoicStr + " " + metabName);
+													} else {
+														reacNamesBfr.append(stoicStr + " " + reactant);
+													}									
+												}
+
 											} else {
-												LocalConfig.getInstance().getMetaboliteUsedMap().put(reactant, new Integer(1));
-											}	
-											
+												if (stoicStr.length() == 0 || Double.valueOf(stoicStr) == 1.0) {
+													if (metabName != null && metabName.trim().length() > 0) {
+														reacNamesBfr.append(" + " + metabName);
+													} else {
+														reacNamesBfr.append(" + " + reactant);
+													}
+													
+												} else {
+													if (metabName != null && metabName.trim().length() > 0) {
+														reacNamesBfr.append(" + " + stoicStr + " " + metabName);
+													} else {
+														reacNamesBfr.append(" + " + stoicStr + " " + reactant);
+													}
+												}				
+											}			
+											if (!newMetabolite || LocalConfig.getInstance().addMetaboliteOption) {
+												rrInsertPrep.setInt(1, i - correction);
+												rrInsertPrep.setDouble(2, Double.valueOf(stoicStr));
+												rrInsertPrep.setInt(3, id);
+												rrInsertPrep.executeUpdate();
+												if (parser.isSuspicious(reactant)) {
+													if (!LocalConfig.getInstance().getSuspiciousMetabolites().contains(id)) {
+														LocalConfig.getInstance().getSuspiciousMetabolites().add(id);
+													}							
+												}
+												if (LocalConfig.getInstance().getMetaboliteUsedMap().containsKey(reactant)) {
+													int usedCount = (Integer) LocalConfig.getInstance().getMetaboliteUsedMap().get(reactant);
+													LocalConfig.getInstance().getMetaboliteUsedMap().put(reactant, new Integer(usedCount + 1));									
+												} else {
+													LocalConfig.getInstance().getMetaboliteUsedMap().put(reactant, new Integer(1));
+												}	
+											}
 										} else {
 											//Invalid reaction
 											valid = false;
@@ -327,18 +400,20 @@ public class TextReactionsModelReader {
 										}								
 									}
 								}
+										
 								//reactions of the type a ==> will be size 1, assigned the value [0] in parser
-								ArrayList<ArrayList> products = reactionList.get(1);
+								ArrayList<ArrayList<String>> products = parser.reactionList(reactionEqunAbbr.trim()).get(1);
 								if (products.get(0).size() == 1) {
+									noProducts = true;
 								} else {
 									for (int p = 0; p < products.size(); p++) {
 										if (products.get(p).size() == 2) {
 											String stoicStr = (String) products.get(p).get(0);
-											String product = (String) products.get(p).get(1);
-											String addMetab = "insert into metabolites (metabolite_abbreviation, boundary) values('"  + product + "', 'false');";
-											
+											String product = (String) products.get(p).get(1);	
+											boolean newMetabolite = false;
 											if (!(LocalConfig.getInstance().getMetaboliteIdNameMap().containsKey(product))) {
-												if (GraphicalInterface.showPrompt) {
+												newMetabolite = true;
+												if (GraphicalInterface.showPrompt && product.length() > 0) {
 													Object[] options = {"Yes",
 															"Yes to All",
 													"No"};
@@ -354,197 +429,253 @@ public class TextReactionsModelReader {
 													// interpret the user's choice	  
 													if (choice == JOptionPane.YES_OPTION)
 													{
-														stat.executeUpdate(addMetab);
+														LocalConfig.getInstance().addMetaboliteOption = true;
+														addMetabPrep.setString(1, product);
+														addMetabPrep.executeUpdate();
 														maxMetabId += 1;
 														LocalConfig.getInstance().getMetaboliteIdNameMap().put(product, new Integer(maxMetabId));
 													}
 													//No option actually corresponds to "Yes to All" button
 													if (choice == JOptionPane.NO_OPTION)
 													{
+														LocalConfig.getInstance().addMetaboliteOption = true;
 														GraphicalInterface.showPrompt = false;
-														stat.executeUpdate(addMetab);
+														addMetabPrep.setString(1, product);
+														addMetabPrep.executeUpdate();
 														maxMetabId += 1;
 														LocalConfig.getInstance().getMetaboliteIdNameMap().put(product, new Integer(maxMetabId));
 													}
 													//Cancel option actually corresponds to "No" button
 													if (choice == JOptionPane.CANCEL_OPTION) {
-														addMetaboliteOption = false;
-														reactionString = "";
-														valid = false;
+														LocalConfig.getInstance().addMetaboliteOption = false;
+														LocalConfig.getInstance().noButtonClicked = true;
+														removeProdList.add(product);
 													}	  
 												} else {
-													stat.executeUpdate(addMetab);
+													addMetabPrep.setString(1, product);
+													addMetabPrep.executeUpdate();
 													maxMetabId += 1;
 													LocalConfig.getInstance().getMetaboliteIdNameMap().put(product, new Integer(maxMetabId));
 												}		
 											}
 											
-											Integer id = (Integer) LocalConfig.getInstance().getMetaboliteIdNameMap().get(product);
-											
-											String insert = "INSERT INTO reaction_products(reaction_id, stoic, metabolite_id) values (" + (i - correction) + ", " + stoicStr + ", " + id + ");";
-											stat.executeUpdate(insert);	
-											if (LocalConfig.getInstance().getMetaboliteUsedMap().containsKey(product)) {
-												int usedCount = (Integer) LocalConfig.getInstance().getMetaboliteUsedMap().get(product);
-												LocalConfig.getInstance().getMetaboliteUsedMap().put(product, new Integer(usedCount + 1));									
-											} else {
-												LocalConfig.getInstance().getMetaboliteUsedMap().put(product, new Integer(1));
+											Integer id = (Integer) LocalConfig.getInstance().getMetaboliteIdNameMap().get(product);											
+											String metabName = "";
+											reacNamePrep.setInt(1, id);
+											ResultSet rs = reacNamePrep.executeQuery();
+											while (rs.next()) {
+												metabName = rs.getString("metabolite_name");
 											}
+											rs.close();
+											if (p == 0) {
+												if (stoicStr.length() == 0 || Double.valueOf(stoicStr) == 1.0) {
+													if (metabName != null && metabName.trim().length() > 0) {
+														prodNamesBfr.append(metabName);
+													} else {
+														prodNamesBfr.append(product);
+													}									
+												} else {
+													if (metabName != null && metabName.trim().length() > 0) {
+														prodNamesBfr.append(stoicStr + " " + metabName);
+													} else {
+														prodNamesBfr.append(stoicStr + " " + product);
+													}									
+												}
+
+											} else {
+												if (stoicStr.length() == 0 || Double.valueOf(stoicStr) == 1.0) {
+													if (metabName != null && metabName.trim().length() > 0) {
+														prodNamesBfr.append(" + " + metabName);
+													} else {
+														prodNamesBfr.append(" + " + product);
+													}
+													
+												} else {
+													if (metabName != null && metabName.trim().length() > 0) {
+														prodNamesBfr.append(" + " + stoicStr + " " + metabName);
+													} else {
+														prodNamesBfr.append(" + " + stoicStr + " " + product);
+													}
+												}				
+											}			
+											if (!newMetabolite || LocalConfig.getInstance().addMetaboliteOption) {
+												rpInsertPrep.setInt(1, i - correction);
+												rpInsertPrep.setDouble(2, Double.valueOf(stoicStr));
+												rpInsertPrep.setInt(3, id);
+												rpInsertPrep.executeUpdate();	
+												if (parser.isSuspicious(product)) {
+													if (!LocalConfig.getInstance().getSuspiciousMetabolites().contains(id)) {
+														LocalConfig.getInstance().getSuspiciousMetabolites().add(id);
+													}							
+												}
+												if (LocalConfig.getInstance().getMetaboliteUsedMap().containsKey(product)) {
+													int usedCount = (Integer) LocalConfig.getInstance().getMetaboliteUsedMap().get(product);
+													LocalConfig.getInstance().getMetaboliteUsedMap().put(product, new Integer(usedCount + 1));									
+												} else {
+													LocalConfig.getInstance().getMetaboliteUsedMap().put(product, new Integer(1));
+												}
+											}										
 											
 										} else {
 											//Invalid reaction
 											valid = false;
-											break;
+											break;											
 										}
 									}							
 								}
+								// revise reaction equation if "No" button clicked
+								if (valid && LocalConfig.getInstance().noButtonClicked) {
+									System.out.println("no");
+									String revisedReactants = "";
+									String revisedProducts = "";
+									String revisedReaction = "";
+									if (!noReactants) {
+										revisedReactants = revisedReactants(reactants, removeReacList);
+									}									
+									String splitString = parser.splitString(reactionEqunAbbr);
+									if (!noProducts) {
+										revisedProducts = revisedProducts(products, removeProdList);
+									}									
+									revisedReaction = revisedReactants + " " + splitString + revisedProducts;
+									// prevents reaction equation from appearing as only an arrow such as ==>
+									if (revisedReaction.trim().compareTo(splitString.trim()) != 0) {
+										reactionEqunAbbr = revisedReaction.trim();
+									} else {
+										reactionEqunAbbr = "";
+									}									
+								}								
 							} else {
 								//Invalid reaction
 								valid = false;
 							}
-							
-							
+														
 							if (!valid) {
-								String deleteReac = "delete from reaction_reactants where reaction_id=" + (i - correction) + ";";
-								stat.executeUpdate(deleteReac);
-								String deleteProd = "delete from reaction_products where reaction_id=" + (i - correction) + ";";
-								stat.executeUpdate(deleteProd);
-								if (reactionString != null || reactionString.length() > 0) {
-									LocalConfig.getInstance().getInvalidReactions().add(reactionString);
-								}	
+								deleteReacPrep.setInt(1, i - correction);
+								deleteReacPrep.executeUpdate();
+								deleteProdPrep.setInt(1, i - correction);
+								deleteProdPrep.executeUpdate();
+								if (reactionEqunAbbr != null && reactionEqunAbbr.length() > 0) {
+									LocalConfig.getInstance().getInvalidReactions().add(reactionEqunAbbr);
+								}
 							}										
 						} catch (Throwable t) {
 							
 						}
 						
+						if (reversible == "false") {
+							rxnNamesBfr.append(reacNamesBfr).append(" --> ").append(prodNamesBfr);
+						} else {
+							rxnNamesBfr.append(reacNamesBfr).append(" <==> ").append(prodNamesBfr);
+						}
+
+						reactionEqunNames = rxnNamesBfr.toString().trim();
+						
 						if (LocalConfig.getInstance().getLowerBoundColumnIndex() > -1) {
-							if (dataArray[LocalConfig.getInstance().getLowerBoundColumnIndex()].compareTo("") != 0) {
+							if (isNumber(dataArray[LocalConfig.getInstance().getLowerBoundColumnIndex()])) {
 								lowerBound = Double.valueOf(dataArray[LocalConfig.getInstance().getLowerBoundColumnIndex()]);							
 							} 
 						} 
 						if (LocalConfig.getInstance().getUpperBoundColumnIndex() > -1) {
-							if (dataArray[LocalConfig.getInstance().getUpperBoundColumnIndex()].compareTo("") != 0) {
+							if (isNumber(dataArray[LocalConfig.getInstance().getUpperBoundColumnIndex()])) {
 								upperBound = Double.valueOf(dataArray[LocalConfig.getInstance().getUpperBoundColumnIndex()]);							
 							}
 						} 
 						if (LocalConfig.getInstance().getBiologicalObjectiveColumnIndex() > -1) {
-							if (dataArray[LocalConfig.getInstance().getBiologicalObjectiveColumnIndex()].compareTo("") != 0) {
-								objective = Double.valueOf(dataArray[LocalConfig.getInstance().getBiologicalObjectiveColumnIndex()]);							
+							if (isNumber(dataArray[LocalConfig.getInstance().getBiologicalObjectiveColumnIndex()])) {
+								biologicalObjective = Double.valueOf(dataArray[LocalConfig.getInstance().getBiologicalObjectiveColumnIndex()]);							
 							} 							
+						} 
+						if (LocalConfig.getInstance().getSyntheticObjectiveColumnIndex() > -1) {
+							if (isNumber(dataArray[LocalConfig.getInstance().getSyntheticObjectiveColumnIndex()])) {
+								syntheticObjective = Double.valueOf(dataArray[LocalConfig.getInstance().getSyntheticObjectiveColumnIndex()]);							
+							} 							
+						} 
+						if (LocalConfig.getInstance().getGeneAssociationColumnIndex() > -1) {
+							geneAssociations = dataArray[LocalConfig.getInstance().getGeneAssociationColumnIndex()];						 							
 						} 
 						
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 0) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta1 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].replaceAll("'", "''");
-							} else {
-								meta1 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)];
-							}							
+							meta1 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)];						
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 1) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta2 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(1)].replaceAll("'", "''");
-							} else {
-								meta2 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(1)];
-							}
+							meta2 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(1)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 2) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta3 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(2)].replaceAll("'", "''");
-							} else {
-								meta3 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(2)];
-							}
+							meta3 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(2)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 3) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta4 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(3)].replaceAll("'", "''");
-							} else {
-								meta4 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(3)];
-							}
+							meta4 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(3)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 4) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta5 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(4)].replaceAll("'", "''");
-							} else {
-								meta5 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(4)];
-							}
+							meta5 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(4)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 5) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta6 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(5)].replaceAll("'", "''");
-							} else {
-								meta6 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(5)];
-							}
+							meta6 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(5)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 6) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta7 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(6)].replaceAll("'", "''");
-							} else {
-								meta7 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(6)];
-							}
+							meta7 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(6)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 7) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta8 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(7)].replaceAll("'", "''");
-							} else {
-								meta8 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(7)];
-							}
+							meta8 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(7)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 8) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta9 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(8)].replaceAll("'", "''");
-							} else {
-								meta9 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(8)];
-							}
+							meta9 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(8)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 9) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta10 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(9)].replaceAll("'", "''");
-							} else {
-								meta10 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(9)];
-							}
+							meta10 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(9)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 10) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta11 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(10)].replaceAll("'", "''");
-							} else {
-								meta11 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(10)];
-							}
+							meta11 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(10)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 11) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta12 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(11)].replaceAll("'", "''");
-							} else {
-								meta12 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(11)];
-							}
+							meta12 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(11)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 12) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta13 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(12)].replaceAll("'", "''");
-							} else {
-								meta13 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(12)];
-							}
+							meta13 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(12)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 13) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta14 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(13)].replaceAll("'", "''");
-							} else {
-								meta14 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(13)];
-							}
+							meta14 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(13)];
 						}
 						if (LocalConfig.getInstance().getReactionsMetaColumnIndexList().size() > 14) {
-							if (dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(0)].contains("'")) {
-								meta15 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(14)].replaceAll("'", "''");
-							} else {
-								meta15 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(14)];
-							}
+							meta15 = dataArray[LocalConfig.getInstance().getReactionsMetaColumnIndexList().get(14)];
+						}
+
+						// TODO : add error message here?
+						if (lowerBound < 0.0 && reversible.equals("false")) {
+							lowerBound = 0.0;
 						}
 						
-						String insert = "INSERT INTO reactions(knockout, flux_value, reaction_abbreviation, " 
-							+ " reaction_name, reaction_string, reversible, lower_bound, upper_bound, biological_objective," 
-							+ " meta_1, meta_2, meta_3, meta_4, meta_5, meta_6, meta_7, meta_8, "
-							+ " meta_9, meta_10, meta_11, meta_12, meta_13, meta_14, meta_15) values " 
-							+ " (" + "'" + knockout + "', '" + fluxValue + "', '" + reactionAbbreviation + "', '" + reactionName + "', '" + reactionString + "', '" + reversible + "', '" + lowerBound + "', '" + upperBound + "', '" + objective + "', '" + meta1 + "', '" + meta2 + "', '" + meta3 + "', '" + meta4 + "', '" + meta5 + "', '" + meta6 + "', '" + meta7 + "', '" + meta8 + "', '" + meta9 + "', '" + meta10 + "', '" + meta11 + "', '" + meta12 + "', '" + meta13 + "', '" + meta14 + "', '" + meta15 + "');";
-						stat.executeUpdate(insert);
-					}					
+						reacInsertPrep.setString(1, knockout);
+						reacInsertPrep.setDouble(2, fluxValue);
+						reacInsertPrep.setString(3, reactionAbbreviation);
+						reacInsertPrep.setString(4, reactionName);
+						reacInsertPrep.setString(5, reactionEqunAbbr);
+						reacInsertPrep.setString(6, reactionEqunNames);
+						reacInsertPrep.setString(7, reversible);
+						reacInsertPrep.setDouble(8, lowerBound);
+						reacInsertPrep.setDouble(9, upperBound);
+						reacInsertPrep.setDouble(10, biologicalObjective);
+						reacInsertPrep.setDouble(11, syntheticObjective);
+						reacInsertPrep.setString(12, geneAssociations);
+						reacInsertPrep.setString(13, meta1);
+						reacInsertPrep.setString(14, meta2);
+						reacInsertPrep.setString(15, meta3);
+						reacInsertPrep.setString(16, meta4);
+						reacInsertPrep.setString(17, meta5);
+						reacInsertPrep.setString(18, meta6);
+						reacInsertPrep.setString(19, meta7);
+						reacInsertPrep.setString(20, meta8);
+						reacInsertPrep.setString(21, meta9);
+						reacInsertPrep.setString(22, meta10);
+						reacInsertPrep.setString(23, meta11);
+						reacInsertPrep.setString(24, meta12);
+						reacInsertPrep.setString(25, meta13);
+						reacInsertPrep.setString(26, meta14);
+						reacInsertPrep.setString(27, meta15);
+						
+						reacInsertPrep.executeUpdate();
+					}
+					LocalConfig.getInstance().noButtonClicked = false;
 				}
 				stat.executeUpdate("COMMIT");
 			} catch (Exception e) {
@@ -560,8 +691,80 @@ public class TextReactionsModelReader {
 
 		}
 		GraphicalInterface.showPrompt = true;
-		//System.out.println("Done");
+		LocalConfig.getInstance().hasMetabolitesFile = false;
 	}
+	
+	// methods used if "No" button is pressed in order to reconstruct reaction equation with species omitted
+	public String revisedReactants(ArrayList<ArrayList<String>> reactants, ArrayList<String> removeReacList) {
+		String revisedReactants = "";
+		StringBuffer reacBfr = new StringBuffer();
+		for (int r = 0; r < reactants.size(); r++) {
+			String stoicStr = (String) reactants.get(r).get(0);
+			String reactant = (String) reactants.get(r).get(1);
+			if (!removeReacList.contains(reactant)) {
+				if (r == 0) {
+					if (Double.valueOf(stoicStr) == 1) {
+						reacBfr.append(reactant);
+					} else {
+						reacBfr.append(stoicStr + " " + reactant);
+					}		
+				} else {
+					if (Double.valueOf(stoicStr) == 1) {
+						reacBfr.append(" + " + reactant);
+					} else {
+						reacBfr.append(" + " + stoicStr + " " + reactant);
+					}				
+				}
+			}								
+		}
+		revisedReactants = reacBfr.toString();
+		if (revisedReactants.startsWith(" + ")) {
+			revisedReactants = revisedReactants.substring(3);
+		}
+		
+		return revisedReactants;
+	}
+	
+	public String revisedProducts(ArrayList<ArrayList<String>> products, ArrayList<String> removeProdList) {
+		String revisedProducts = "";
+		StringBuffer prodBfr = new StringBuffer();
+		for (int r = 0; r < products.size(); r++) {
+			String stoicStr = (String) products.get(r).get(0);
+			String product = (String) products.get(r).get(1);
+			if (!removeProdList.contains(product)) {
+				if (r == 0) {
+					if (Double.valueOf(stoicStr) == 1) {
+						prodBfr.append(product);
+					} else {
+						prodBfr.append(stoicStr + " " + product);
+					}		
+				} else {
+					if (Double.valueOf(stoicStr) == 1) {
+						prodBfr.append(" + " + product);
+					} else {
+						prodBfr.append(" + " + stoicStr + " " + product);
+					}				
+				}
+			}						
+		}
+		revisedProducts = prodBfr.toString();
+		if (revisedProducts.startsWith(" + ")) {
+			revisedProducts = revisedProducts.substring(3);
+		}
+				
+		return revisedProducts;
+	}
+	
+	public boolean isNumber(String s) {
+		try {
+			Double.parseDouble(s);
+		}
+		catch (NumberFormatException nfe) {
+			return false;
+		}
+		return true;
+	}
+	
 }
 
 
